// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should render correctly with many expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     expense
    s
     totalling 
    $232,134,432.55
  </h1>
</div>
`;
